# Py-Messanger

./: .Server.rar  LICENSE  README.md  client.py  pyproject.toml  server.py  user.json  version
Client/: client.py
Server/: server.py  user.json
