[tool.poetry]
name = "py-messenger"
version = "0.1.0"
description = "A simple HTTP-based messenger using Flask and Tkinter."
authors = ["xar2143 <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
